--- a/QuestTrack/app/src/main/res/layout/activity_main.xml
+++ b/QuestTrack/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/logScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -11,7 +11,7 @@
         android:id="@+id/pageName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quest Tracker"
+        android:text="@string/quest_tracker"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         style="@style/mainButton"
         android:layout_width="276dp"
         android:layout_height="106dp"
-        android:text="New Quest"
+        android:text="@string/new_quest"
         android:textSize="46sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginTop="89dp"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="186dp"
-        android:text="Load Quest"
+        android:text="@string/load_quest"
         android:textSize="43sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
