--- a/QuestTrack/app/src/main/res/layout/recycler_item_view.xml
+++ b/QuestTrack/app/src/main/res/layout/recycler_item_view.xml
@@ -8,6 +8,7 @@
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:contentDescription="@string/abc"
         android:src="@drawable/baseline_abc_24"
         android:id="@+id/icon_view"/>
 
