--- a/QuestTrack/app/src/main/res/layout/activity_main.xml
+++ b/QuestTrack/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_width="276dp"
         android:layout_height="106dp"
         android:text="@string/new_quest"
+        android:textIsSelectable="true"
         android:textSize="46sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +41,7 @@
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="186dp"
         android:text="@string/load_quest"
+        android:textIsSelectable="true"
         android:textSize="43sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
