--- a/QuestTrack/app/src/main/res/layout/recycler_item_view.xml
+++ b/QuestTrack/app/src/main/res/layout/recycler_item_view.xml
@@ -13,12 +13,12 @@
         android:id="@+id/icon_view"/>
 
     <TextView
+        android:textColor="@color/purple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/file_name_text_view"
         android:layout_toEndOf="@+id/icon_view"
         android:padding="10dp"
-        android:textColor="@color/black"
         android:text="@string/documents"/>
     
     <LinearLayout
