--- a/QuestTrack/app/src/main/res/layout/activity_log_view.xml
+++ b/QuestTrack/app/src/main/res/layout/activity_log_view.xml
@@ -9,12 +9,10 @@
 
     <EditText
         android:id="@+id/noteName"
-        android:layout_width="387dp"
-        android:layout_height="39dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="14dp"
-        android:layout_marginBottom="5dp"
         android:ems="10"
         android:inputType="text"
         android:text="@string/name"
@@ -25,31 +23,35 @@
 
     <EditText
         android:id="@+id/noteBody"
-        android:layout_width="382dp"
-        android:layout_height="642dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginBottom="9dp"
         android:ems="10"
         android:inputType="text"
         android:isScrollContainer="false"
         android:keepScreenOn="false"
         android:text="@string/main_text"
         android:textAlignment="viewStart"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/saveButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noteName" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/saveButton"
-        android:text="@string/save"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="23dp"
+        android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/noteBody" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
